added base html/css for welcome page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root,
+.root {
+  height: 100%;
+  width: 100%;
+}
+
 h1 {
   @apply text-2xl;
 }
