added formation data / css for 4-1-2-1-2 Wide

--- a/client/src/styles/formations.css
+++ b/client/src/styles/formations.css
@@ -2,7 +2,7 @@
 @tailwind utilities;
 
 #formationContainer {
-  @apply bg-green-300 w-3/4 flex justify-center pt-3;
+  @apply bg-green-300 w-3/4 flex justify-center pt-20 pb-20;
   height: 100%;
 }
 
@@ -56,7 +56,7 @@
   }
 }
 
-.f_41212 {
+.f_41212N {
   @apply grid grid-cols-7;
 
   & .ls {
@@ -73,6 +73,44 @@
   }
   & .rcm {
     grid-column: 5/8;
+  }
+  & .cdm {
+    grid-column: 4/8;
+  }
+  & .lb {
+    grid-column: 1;
+  }
+  & .lcb {
+    grid-column: 3;
+  }
+  & .rcb {
+    grid-column: 5;
+  }
+  & .rb {
+    grid-column: 7;
+  }
+  & .gk {
+    grid-column: 4;
+  }
+}
+
+.f_41212W {
+  @apply grid grid-cols-7;
+
+  & .ls {
+    grid-column: 3;
+  }
+  & .rs {
+    grid-column: 5/8;
+  }
+  & .cam {
+    grid-column: 4/8;
+  }
+  & .lm {
+    grid-column: 1;
+  }
+  & .rm {
+    grid-column: 7;
   }
   & .cdm {
     grid-column: 4/8;
