adjusted overflow y for formation component, added base styling for the bench/reserves bar

--- a/client/src/styles/formations.css
+++ b/client/src/styles/formations.css
@@ -3,7 +3,7 @@
 
 #formationContainer {
   @apply bg-green-300 w-full flex justify-center pt-5 pb-10;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .formationGrid {
