--- a/client/src/styles/formations.css
+++ b/client/src/styles/formations.css
@@ -291,3 +291,39 @@
     grid-column: 4;
   }
 }
+
+.f_4231W {
+  & .st {
+    grid-column: 4;
+  }
+  & .lm {
+    grid-column: 1;
+  }
+  & .cam {
+    grid-column: 4;
+  }
+  & .rm {
+    grid-column: 7;
+  }
+  & .ldm {
+    grid-column: 3;
+  }
+  & .rdm {
+    grid-column: 5;
+  }
+  & .lb {
+    grid-column: 1;
+  }
+  & .lcb {
+    grid-column: 3;
+  }
+  & .rcb {
+    grid-column: 5;
+  }
+  & .rb {
+    grid-column: 7;
+  }
+  & .gk {
+    grid-column: 4;
+  }
+}
