transfered first team & currentPosition props to relevant components, adjusted display for Formation UI - changed background color, dynamic player names, added temporary 90 to represent player overall

--- a/client/src/styles/formations.css
+++ b/client/src/styles/formations.css
@@ -2,7 +2,7 @@
 @tailwind utilities;
 
 #formationContainer {
-  @apply bg-green-300 w-full flex justify-center pt-5 pb-10;
+  @apply bg-gray-500 w-full flex justify-center pt-5 pb-10;
   overflow-y: auto;
 }
 
