hide the options bar for now, changed main Squad Builder layout to be flex column so that the formation is displayed first, and then the bench/reserves is underneath it

--- a/client/src/styles/formations.css
+++ b/client/src/styles/formations.css
@@ -3,7 +3,7 @@
 
 #formationContainer {
   @apply bg-gray-500 w-full flex justify-center pt-5 pb-10;
-  overflow-y: auto;
+  height: 500px;
 }
 
 .formationGrid {
