UI updates for the main page, added the logo as a background image

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -10,6 +10,12 @@ body,
   width: 100%;
 }
 
+#homeBackground {
+  background: url('../assets/Logo Assets/Asset 11@4x.png') no-repeat center
+    center fixed;
+  background-size: contain;
+}
+
 h1 {
   @apply text-2xl;
 }
@@ -22,7 +28,7 @@ h3 {
 
 /* default button classes */
 .btn-primary {
-  @apply bg-green-600 p-3 px-6 pt-2 text-white font-bold rounded-full focus:outline-none focus:ring-4 focus:ring-green-300;
+  @apply bg-green-700 p-3 px-6 pt-2 text-white font-bold rounded-full focus:outline-none focus:ring-4 focus:ring-green-300;
 }
 
 .btn-default {
